force-app/main/default/objects/Beat_User__c/Beat_User__c.object-meta.xml
<CustomObject>
    <label>Beat User</label>
    <nameField>
        <displayFormat>BU-{00000}</displayFormat>
        <label>Beat User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>