force-app/main/default/objects/Beat_User__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Beat Users</relationshipLabel>
    <relationshipName>Beat_Users</relationshipName>
    <type>Lookup</type>
</CustomField>