force-app/main/default/objects/Beat_User__c/fields/BeatAccountName__c.field-meta.xml
<CustomField>
    <fullName>BeatAccountName__c</fullName>
    <formula>Beat__r.Customer_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BeatAccountName</label>
    <type>Text</type>
</CustomField>