force-app/main/default/objects/Beat_User__c/fields/BeatName__c.field-meta.xml
<CustomField>
    <fullName>BeatName__c</fullName>
    <formula>Beat__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BeatName</label>
    <type>Text</type>
</CustomField>