force-app/main/default/objects/Beat_User__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserName</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beat_Users</relationshipName>
    <type>Lookup</type>
</CustomField>