force-app/main/default/objects/Beat_User__c/fields/Visit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_End_Date__c</fullName>
    <label>Visit End Date</label>
    <type>Date</type>
</CustomField>